Navigating to the same URL adds a duplicate session history with BFCache in parent
Categories
(Core :: DOM: Navigation, defect, P3)
Tracking
()
People
(Reporter: emk, Assigned: smaug)
References
(Regression)
Details
(Keywords: regression)
Attachments
(2 files)
Steps to reproduce:
- Open
about:profiles. - Click [Restart normally...] to restart the browser.
- Open any URL (using
https://example.comhere) in a new tab. - Make sure that the back button is deactivated.
- Drag the lock icon into the current page.
- Press Enter key in the address bar.
Actual result:
Step 5 will activate the back button and add an entry to the back menu.
Step 6 will add another entry to the back menu.
Expected result:
Both step 5 and 6 should not activate the back button.
Note that step 2 is required. This is not reproducible with the first run in a fresh profile.
Regression range:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=5e13c2a606e299c19f97867e110a9907ceb5c31f&tochange=89aa5231ddb828f9577650abd14b22b299d0f9ab
(edit) This is wrong. See comment #2 for the correct range.
| Reporter | ||
Updated•4 years ago
|
| Reporter | ||
Updated•4 years ago
|
| Reporter | ||
Comment 1•4 years ago
|
||
This is even reproducible with in-page links:
3. Open https://www.mozilla.org in a new tab.
4. Make sure that the back button is deactivated.
5. Click the left-top "moz://a" logo.
Comment 2•4 years ago
|
||
I have no idea, and with the STR in comment 1, I tried mozregression. The regression range is:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=57367b5d6fcd95b664bf3b926bc510e4b16e83c8&tochange=7d32671931b7c2f5cb24b0f4d62bb6884e484175
And suggested regression point is: https://phabricator.services.mozilla.com/D117185
It makes sense to change this kind of behavior by enabling BFCache.
| Reporter | ||
Comment 3•4 years ago
|
||
Yeah, my regression range was wrong somehow. Sorry for the confusion.
| Reporter | ||
Comment 4•4 years ago
|
||
I verified that fission.autostart is true on my profile and flipping fission.bfcacheInParent works around the issue on Firefox 95.
| Reporter | ||
Comment 5•4 years ago
|
||
Note that step 2 is required. This is not reproducible with the first run in a fresh profile.
This is because Fission staged rollout has no effect until restart (fission.autostart is not a "live" pref).
| Reporter | ||
Comment 6•4 years ago
|
||
This bug reproduced since https://hg.mozilla.org/mozilla-central/rev/d683ade21deb with fission.autostart, fission.sessionHistoryInParent, and fission.bfcacheInParent enabled. BFCache in parent has been broken from day one.
Updated•4 years ago
|
| Reporter | ||
Comment 7•4 years ago
|
||
This bug is visible from web pages via history.length.
| Reporter | ||
Comment 8•4 years ago
|
||
Updated•4 years ago
|
| Reporter | ||
Comment 9•4 years ago
|
||
Test only. I have no idea how to fix this.
Comment 10•4 years ago
|
||
Olli says this is an edge case in SHIP code.
Updated•4 years ago
|
Comment 11•4 years ago
|
||
I noticed this was set to leave-open... are we planning on landing the test case before the fix?
| Reporter | ||
Comment 12•4 years ago
|
||
I don't know. I added leave-open in case of landing the test case first.
Updated•4 years ago
|
Comment 13•4 years ago
|
||
Comment 14•4 years ago
|
||
| bugherder | ||
| Reporter | ||
Updated•4 years ago
|
Updated•4 years ago
|
Updated•4 years ago
|
| Reporter | ||
Comment 15•4 years ago
|
||
This bug is not reproducible if BFCache in parent is disabled even if fission is enabled. Moreover, this bug is reproducible if BFCache in parent is enabled even if fission is disabled.
| Assignee | ||
Updated•4 years ago
|
| Assignee | ||
Comment 16•4 years ago
|
||
The idea is to get us to https://searchfox.org/mozilla-central/rev/25d26b0a62cc5bb4aa3bb90a11f3b0b7c52859c4/docshell/base/nsDocShell.cpp#10824,10829 so that
we can do a replace load.
It should be ok to disable bfcache in all the cases, not only in the cases nsDocShell checks for replace load.
Comment 17•4 years ago
|
||
Comment 18•4 years ago
|
||
| bugherder | ||
Updated•4 years ago
|
Updated•4 years ago
|
Comment 19•4 years ago
|
||
I've reproduced this bug using an affected Nightly build (97.0a1, 20211213093143), with STR from comment 0.
The issue is verified as fixed on latest Beta 97.0b9, across OS's: Win 10 x64, macOS 11 and Ubuntu 18.4 x64.
Description
•